log/build_2024-04-09_18-16-54/video_stream_client/stderr.log
  File "/home/chen/Desktop/dev_ws/install/video_stream_client/lib/python3.10/site-packages/video_stream_client/image_publisher.py", line 21
    self.publisher_ = self.create_publisher(Image, 'camera/image', qos_profile
                                           ^
SyntaxError: '(' was never closed

